traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:5: error: not found: value y
  while (y!=getMondeHauteur()-1){
         ^TraversalDiagonal:7: error: not found: value x
    x=0
    ^TraversalDiagonal:8: error: not found: value y
    y=diag
    ^TraversalDiagonal:9: error: not found: value y
    while (y!=0) {
           ^TraversalDiagonal:10: error: not found: value x
      setPos(x,y)
             ^TraversalDiagonal:10: error: not found: value y
      setPos(x,y)
               ^TraversalDiagonal:13: error: not found: value x
      x=x+1
      ^TraversalDiagonal:14: error: not found: value y
      y=y-1}
      ^